Fix horizontal scrolling on project images
- Remove left & right margin on project images once we drop it into
a single column

--- a/src/components/common/Project/project.module.scss
+++ b/src/components/common/Project/project.module.scss
@@ -25,4 +25,8 @@
   max-width: rem(700px);
   min-width: rem(300px);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  @include media('<800px') {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
